...
    Column(
        verticalArrangement = Arrangement.Bottom,
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier
            .fillMaxSize()
            .padding(start = 20.dp, end = 20.dp, top = 10.dp, bottom = 10.dp)
            .testTag("compare_page")
    ) {
        // row for location pickers
        Row(
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween
        ) {
...

            // first date picker
            Button(
                onClick = { showDatePicker0 = true },
                modifier = Modifier
                    .weight(1f)
                    .testTag("compare_date_button_0"),
                colors = ButtonDefaults.buttonColors(containerColor = MaterialTheme.colorScheme.secondary)
            ) {
                Icon(
                    Icons.Outlined.Today,
                    contentDescription = "Date Icon",
                    tint = MaterialTheme.colorScheme.onSecondary
...
