...
    onThemeChange: (ThemeMode) -> Unit,
    themeMode: ThemeMode,
    isMetric: Boolean,
    onMetricChange: (Boolean) -> Unit
    ) {
    // Main Column
    Column (modifier = Modifier.testTag("settings_page") ) {
        // default padding
        val padding = 8.dp

        // Headline
        Text(
            text = stringResource(id = R.string.settings_title),
...
    val options = listOf(stringResource(R.string.s_metric), stringResource(R.string.s_imperial))

    // main row
    Row(
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.SpaceBetween,
        modifier = Modifier.clickable { expanded = true }.testTag("settings_unit_switcher_row")
    ) {
        Spacer(modifier = Modifier.width(padding))
        // Column for left side text and description
        Column(verticalArrangement = Arrangement.Center) {
            Text(
                text = stringResource(id = R.string.s_units),
...
    val options = listOf(ThemeMode.Light, ThemeMode.Dark, ThemeMode.System)

    // main row
    Row(
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.SpaceBetween,
        modifier = Modifier.clickable { expanded = true }.testTag("settings_theme_switcher_row")
    ) {
        Spacer(modifier = Modifier.width(8.dp))
        // Column for left side text and description
        Column(verticalArrangement = Arrangement.Center) {
            Text(
                // title
...
