...
                            textFieldState.clearText()
                            Modifier.testTag("search_bar_clear")
                        }) {
                            Icon(Icons.Default.Close, contentDescription = "search_bar_clear")
                        }
                    },
                    modifier = Modifier.testTag("search_bar_input")
                )
            },
            expanded = true,
            onExpandedChange = {},
            windowInsets = WindowInsets(top = 0.dp),
        ) {
...
